Modify Dockerfile and index.css

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,10 @@
 }
 
 body {
-  font-family: 'Noto Sans KR, sans-serif';
+  font-family: "Noto Sans KR, sans-serif";
 }
 
 .container {
   margin: auto;
+  padding: auto;
 }
